refactor(leetcode): clean up TreeNode with Lombok and rename from() to of()
Replace manual constructors with Lombok @AllArgsConstructor/@NoArgsConstructor,
rename factory method from() to of(), and rename print_r to printRecursive.