@@ -22,9 +22,9 @@ class BinaryTreeLevelOrderTraversalTest {
   private static Stream<Arguments> levelOrder() {
     return Stream.of(
         Arguments.of(
-            TreeNode.from(3, 9, 20, null, null, 15, 7),
+            TreeNode.of(3, 9, 20, null, null, 15, 7),
             List.of(List.of(3), List.of(9, 20), List.of(15, 7))),
-        Arguments.of(TreeNode.from(1), Collections.singletonList(List.of(1))),
-        Arguments.of(TreeNode.from(), Collections.emptyList()));
+        Arguments.of(TreeNode.of(1), Collections.singletonList(List.of(1))),
+        Arguments.of(TreeNode.of(), Collections.emptyList()));
   }
 }
